// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="swiper-container swiper-container-initialized swiper-container-horizontal"
      style="height: 185px;"
    >
      <div
        class="h-full swiper-wrapper "
        style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
      >
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div>
            Slider item
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render empty rows if template not provided 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="swiper-container swiper-container-initialized swiper-container-horizontal"
      style="height: 185px;"
    >
      <div
        class="h-full swiper-wrapper "
        style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
      >
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render pagination 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="swiper-container swiper-container-initialized swiper-container-horizontal"
      style="height: 249px;"
    >
      <div
        class="h-full swiper-wrapper "
        style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
      >
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 185px;"
        >
          <div />
        </div>
      </div>
      <div
        class="flex items-center justify-center h-6 swiper-pagination important:bottom-0 swiper-pagination-clickable swiper-pagination-bullets"
      />
    </div>
  </div>
</div>
`;
